2009-02-27  Per Bothner  <per@bothner.com>

	* NameLookup.java (getInstance, setInstance): New methods.
	(getLanguage, setLanguage): New methods.
	* Language.java (getCompilation): Change to also pass NameLookup.
	(parse): Get "session" NameLookup instance in immediate mode.
	* ModuleExp.java (evalModule): Run compiled body before trying to
	set values in Environment.
	* Compilation.java: Remove 3 unused constructors.
	* LambdaExp.java (allocFieldFor): In imediate mode, field
	may need to be public.
	* Declaration.java (makeField): Likewise.
	* ScopeExp.java (countNonDynamicDecls): New method.

	* NameLookup.java (removedSubsumed): Remove hidden declarations.
	(subsumedBy): New method used by removedSubsumed.

2009-02-25  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (class ClassToInfoMap): New class.
	(mapClassToInfo): Use ClassToInfoMap instead of WeakHashMap.
	* ModuleManager.java: Update accordingly.
	* NameLookup.java: Update GeneralHashTable with generics.
	Make sure to use AbstractHashTable.hashToIndex where needed.

2009-01-14  Per Bothner  <per@bothner.com>

	* BuiltinEnvironment.java: Minor javadoc fix.
	(<init>): Make constructor private, since this is a singleton class.

	* LambdaExp.java (Closure.apply): Check for null body, which can
	happen if a syntax-case macro calls a function in the same module.

2008-12-29  Per Bothner  <per@bothner.com>

	* TryExp.java (getFinallyClause): New accessor method.
	* ExpWalker.java (exitValue): Make protected.
	(getExitValue): New accessor method.

2008-12-27  Per Bothner  <per@bothner.com>

	* TryExp.java (compile): Various tweaks to handle StackMapTable.
	* BlockExp.java: Re-write to use ExitableBlock.
	* ExitExp.java: Likewise.
	* FluidLetExp.java: Minor tweak to enable an optimization.
	* LambdaExp.java (enterFunction): Use new noteStartFunction method.
	* IfExp.java (compile): Update for ExitExp changes.
	* Compilation.java (defaultClassFileVersion): Change to